# satellite-env

./: Dockerfile  README.md  baseline.py  inference.py  launch.sh  openenv.yaml  pyproject.toml  requirements.txt
app/: env.py  main.py  schema.py
server/: app.py
