[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aerospace_satellite_manager"
version = "0.1.0"
description = "OpenEnv Satellite Environment"
dependencies = [
    "openenv-core",
    "fastapi==0.110.0",
    "uvicorn==0.27.1",
    "pydantic==2.6.3",
    "openai==1.13.3",
    "python-dotenv==1.0.1"
]
